<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:title=""
        android:icon="@drawable/ic_menu"
        android:iconTint="@color/colorText"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/search_city"
                android:orderInCategory="100"
                android:title="@string/menuItem1"
                android:icon="@drawable/ic_search_city"
                app:showAsAction="never" />
            <item android:id="@+id/favourite_places"
                android:orderInCategory="100"
                android:icon="@drawable/ic_favourite_places"
                android:title="@string/menuItem2"
                app:showAsAction="never" />
            <item android:id="@+id/where_am_i"
                android:orderInCategory="100"
                android:icon="@drawable/ic_where_am_i"
                android:title="@string/menuItem3"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>